Updated the account verification email + endpoint
